Fully functioning! Now just to add in some extra features!

--- a/calculator.html
+++ b/calculator.html
@@ -8,7 +8,7 @@
 <body>
     <div class="calculator">
         <div id="display">
-            <p class="display-text">222243546656544</p>
+            <p class="display-text"></p>
         </div>
         <div id="clear" class="button delete">
             <p class="button-text">CLEAR</p>
@@ -19,49 +19,49 @@
         <div id="divide" class="button operation">
             <p class="button-text">&#xF7;</p>
         </div>
-        <div id="seven" class="button">
+        <div id="seven" class="button number">
             <p class="button-text">7</p>
         </div>
-        <div id="eight" class="button">
+        <div id="eight" class="button number">
             <p class="button-text">8</p>
         </div>
-        <div id="nine" class="button">
+        <div id="nine" class="button number">
             <p class="button-text">9</p>
         </div>
         <div id="multiply" class="button operation">
             <p class="button-text">&#xD7;</p>
         </div>
-        <div id="four" class="button">
+        <div id="four" class="button number">
             <p class="button-text">4</p>
         </div>
-        <div id="five" class="button">
+        <div id="five" class="button number">
             <p class="button-text">5</p>
         </div>
-        <div id="six" class="button">
+        <div id="six" class="button number">
             <p class="button-text">6</p>
         </div>
         <div id="subtraction" class="button operation">
             <p class="button-text">-</p>
         </div>
-        <div id="one" class="button">
+        <div id="one" class="button number">
             <p class="button-text">1</p>
         </div>
-        <div id="two" class="button">
+        <div id="two" class="button number">
             <p class="button-text">2</p>
         </div>
-        <div id="three" class="button">
+        <div id="three" class="button number">
             <p class="button-text">3</p>
         </div>
         <div id="addition" class="button operation">
             <p class="button-text">+</p>
         </div>
-        <div id="zero" class="button">
+        <div id="zero" class="button number">
             <p class="button-text">0</p>
         </div>
-        <div id="decimal" class="button">
+        <div id="decimal" class="button number">
             <p class="button-text">.</p>
         </div>
-        <div id="equals" class="button operation">
+        <div id="equals" class="button equals">
             <p class="button-text">=</p>
         </div>
     </div>
