--- a/calculator.html
+++ b/calculator.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="calculator.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet"> 
     <meta charset="UTF-8">
     <title>Calculator</title>
@@ -65,5 +65,5 @@
             <p class="button-text">=</p>
         </div>
     </div>
-    <script src="calculator.js"></script>
+    <script src="main.js"></script>
 </body>
